--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
       body {
         margin: 0;
       }
+
+      #game{
+        position: relative;
+      }
+
+      .controls{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: 0;
+
+        height: 110px;
+      }
+
+
     </style>
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
     <div id="game"></div>
+
+    <div class="controls">
+      <input id="chatInput" name="chat" value=""/>
+      <button type="button" id="chatBtn">SEND</button>
+    </div>
+
   </body>
 </html>
