--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="game"></div>
 
     <div class="controls">
-      <input id="chatInput" name="chat" value=""/>
+      <input id="chatInput" name="chat" value="" type="text"/>
       <button type="button" id="chatBtn">SEND</button>
     </div>
 
